RESOLVED FIXED70290
Exception ordering in String.prototype.replace
https://bugs.webkit.org/show_bug.cgi?id=70290
Summary Exception ordering in String.prototype.replace
Gavin Barraclough
Reported 2011-10-17 17:16:06 PDT
If pattern is not a regexp, it should be converted toString before the replacement value has it's toString conversion called.
Attachments
Fix (4.84 KB, patch)
2011-10-17 17:17 PDT, Gavin Barraclough
oliver: review+
Gavin Barraclough
Comment 1 2011-10-17 17:17:57 PDT
Gavin Barraclough
Comment 2 2011-10-17 17:35:43 PDT
Fixed in r97680
Note You need to log in before you can comment on or make changes to this bug.