Exception ordering in String.prototype.replace https://bugs.webkit.org/show_bug.cgi?id=70290

Source/JavaScriptCore:

If pattern is not a regexp, it should be converted toString before the replacement value has it's toString conversion called.

Reviewed by Oliver Hunt.

* runtime/StringPrototype.cpp:
(JSC::stringProtoFuncReplace):

LayoutTests:

Reviewed by Oliver Hunt.

* sputnik/Conformance/15_Native_Objects/15.5_String/15.5.4/15.5.4.11_String.prototype.replace/S15.5.4.11_A1_T11-expected.txt:
* sputnik/Conformance/15_Native_Objects/15.5_String/15.5.4/15.5.4.11_String.prototype.replace/S15.5.4.11_A1_T12-expected.txt:
    - Check in passing results.



Canonical link: https://commits.webkit.org/86402@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@97680 268f45cc-cd09-0410-ab3c-d52691b4dbfc